# GalaxyLib

./: .gitignore  CMakeLists.txt  intro.md
apps/galaxy_test/: main.cpp
apps/stc_test/: main.cpp
docs/: ATC_ideas.txt  ai_agent_tools_spec.md  ai_gameplay_interaction_spec.md  ai_narrative_persistence.md  ai_npc_agent_spec.md  ai_system_authority_spec.md  ai_technical_bridge.md  analysis_system_integrity_review.md  architecture.md  biome_engine_integration.md  clean-code.md  design_ai_lod_system.md  design_dynamic_quest_weaver.md  design_faction_authority_dynamics.md  design_faction_scenarios.md  design_gameplay_loops.md  design_gameplay_scenarios.md  design_inter_agent_narrative.md  design_system_factions.md  economy_ideias.txt  elite_dangerous_resources.md  galaxy_system_integration_guide.md  integration.md  porting-roadmap.md  rich-galaxy-extensions.md  stc_integration_guide.md  tech_tree.md  todo_roadmap.md
include/galaxylib/: base36.hpp  biome.hpp  calendar_date.hpp  coords.hpp  galaxy_api.hpp  galaxy_constants.hpp  galaxy_curves.hpp  galaxy_map.hpp  galaxy_utils.hpp  known_space.hpp  resource.hpp  sector.hpp  space_port.hpp  star_date.hpp  star_system.hpp  star_system_tables.hpp  stc.hpp  system_body.hpp
src/: base36.cpp  coords.cpp  galaxy_api.cpp  galaxy_map.cpp  known_space.cpp  known_space_catalog.cpp  resource.cpp  sector.cpp  space_port.cpp  space_port_tables.cpp  space_port_tables.hpp  star_date.cpp  star_system.cpp  star_system_tables.cpp  stc.cpp  system_body.cpp  system_density.inc
tools/: build_galaxy_bin.py  build_known_space_catalog.py  extract_star_system_tables.py
